spacing fix for w_block

--- a/wfiles/css/wasql.css
+++ b/wfiles/css/wasql.css
@@ -684,7 +684,7 @@ table th a {
 .w_text {color:#565A50;}
 .w_bold {font-weight:bold;}
 .w_border {border:1px solid #000;}
-.w_block {display:block-inline !important;}
+.w_block {display:inline-block !important;padding-right:2px;}
 .w_pointer{cursor:pointer;}
 .w_align_left{text-align:left;}
 .w_align_right{text-align:right;}
